--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "lucide-react": "^0.436.0",
-    "next": "14.2.7",
+    "next": "^14.2.15",
     "react": "^18",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
