--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "^14.2.15",
     "react": "^18",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
