--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -20,6 +21,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "^14.2.15",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
