--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vivus": "^0.4.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/vivus": "^0.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
