--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.436.0",
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
@@ -40,6 +41,7 @@
     "@types/aos": "^3.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/vivus": "^0.4.7",
