--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
     "qrcode": "^1.5.4",
+    "rc-slider": "^11.1.8",
     "react": "^18",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
