--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "iron-session": "^8.0.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "^14.2.15",
