--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "html2canvas": "^1.4.1",
