--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.436.0",
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
+    "photoswipe": "^5.4.4",
     "qrcode": "^1.5.4",
     "rc-slider": "^11.1.8",
     "react": "^18",
