--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/country-telephone-data": "^0.6.3",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-telephone-data": "^0.6.3",
     "date-fns-tz": "^3.2.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
